refactor de converter